--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Benvenuti nella prima pagina web di Sara Cireddu.</h3>
 
-<p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg"</p>
+<p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float=right;margin:11px;widht=60%;"></p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
