--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Questo è un sito dedicato a tutti i golosi di nutella... e amanti dei gatti!</p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
