--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ $ git checkout gh-pages
 <p>Questo è un sito dedicato a tutti i golosi di nutella... e amanti dei gatti!</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
 <p><p><iframe width="560" height="315" src="//www.youtube.com/embed/gn69WVFuTPw" frameborder="0" allowfullscreen></iframe></p></p>
 
