--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
 
 <p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float:right;margin:11px;width=30%;"></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>Questo è un sito dedicato a tutti i golosi di nutella... e agli amanti di gatti!!
 </code></pre>
 
-<p>Questo è un sito dedicato a tutti i golosi di nutella... e amanti dei gatti!</p>
+<p>Vi propongo la miglior ricetta della chef Lotti, ovvero le crepes alla nutella.</p>
 
 <h3>
 <a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>CREPES CON NUTELLA</h3>
