--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float:right;margin:11px;width=30%;"></p>
 
-<pre><code>Questo è un sito dedicato a tutti i golosi di nutella... e agli amanti di gatti!!
-</code></pre>
+Questo è un sito dedicato a tutti i golosi di nutella... e agli amanti di gatti!!
+
 
 <p>Vi propongo la miglior ricetta della chef Lotti, ovvero le crepes alla nutella.</p>
 
