--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Sara-cireddu.github.io by Sara-Cireddu</title>
+    <title>MA CHE BOLLE IN PENTOLA?</title>
   </head>
 
   <body>
@@ -46,14 +46,14 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Benvenuti nella prima pagina web di Sara Cireddu.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>LE MIGLIORI RICETTE DELLA SARRDEGNA.</h3>
 
 <p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float:right;margin:11px;width=30%;"></p>
 
-Questo è un sito dedicato a tutti i golosi di nutella... e agli amanti di gatti!!
+Ho creato un sito dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di bellezza, di sernità, di sole e mare.. ma amche di squisite ricette!
 
 
-<p>Vi propongo la miglior ricetta della chef Lotti, ovvero le crepes alla nutella.</p>
+<p>Con l'aiuto del mio chef di fiducia, Andrea, vi proporrò ricette dolci e salate!E allora mettetevi ai fornelli e... buon appetito!! </p>
 
 <h3>
 <a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>CREPES CON NUTELLA</h3>
