--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Sara-cireddu.github.io</h1>
-            <h2>this is my first web page.</h2>
+            <h1>Ma che bolle in pentola?</h1></h1>
+            <h2>ricette di Sardegna.</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -50,15 +50,15 @@
 
 <p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float:right;margin:11px;width=30%;"></p>
 
-Ho creato un sito dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di bellezza, di sernità, di sole e mare.. ma amche di squisite ricette!
+Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di bellezza, di serenità, di sole e mare.. ma anche di squisite ricette!
 
 
 <p>Con l'aiuto del mio chef di fiducia, Andrea, vi proporrò ricette dolci e salate!E allora mettetevi ai fornelli e... buon appetito!! </p>
 
 <h3>
-<a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>CREPES CON NUTELLA</h3>
+<a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>TRA MARE, MONTAGNA E... CUCINA</h3>
 
-<p><p><iframe width="560" height="315" src="//www.youtube.com/embed/gn69WVFuTPw" frameborder="0" allowfullscreen></iframe></p></p>
+<p><p><iframe width="560" height="315" src="<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
