--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>LE MIGLIORI RICETTE DELLA SARRDEGNA.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>LE MIGLIORI RICETTE DELLA SARDEGNA.</h3>
 
 <p><img src="http://25.media.tumblr.com/tumblr_m6uejnTeL71raymsho1_400.jpg" style="float:right;margin:11px;width=30%;"></p>
 
@@ -58,7 +58,7 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 <h3>
 <a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>TRA MARE, MONTAGNA E... CUCINA</h3>
 
-<p><p><iframe width="560" height="315" src="<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe></p></p>
+<p><p><iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
