--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 <h3>
 <a name="CREPES CON NUTELLA" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>TRA MARE, MONTAGNA E... CUCINA</h3>
 
-<p><p><iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
+<p><p><iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw"</p></p>
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
