--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 <p><p></p><iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src=<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a name="Parliamo di cucina sarda" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>---</p>
+<p>La cucina sarda, ovvero la cucina tipica dell'isola della Sardegna, è variegata, caratterizzata dall'insularità e dalla cultura agropastorale, arricchita nella storia attraverso apporti e contaminazioni dai contatti e scambi fra diverse culture mediterranee. Varia e diversificata, spazia dalle carni arrostite, al pane, i formaggi, i vini, a piatti di mare e di terra, sia di derivazione contadina che pastorale, di cacciagione, di pesca e di raccolta di erbe spontanee. Viene considerata parte della dieta mediterranea, modello nutrizionale proclamato nel 2010 dall'Unesco tra i patrimoni orali e immateriali dell'umanità.</p>
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
