--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 <h3>
 <a name="......" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>TRA MARE, MONTAGNA E... CUCINA</h3>
 
-<p><p></p><iframe width="560" height="315" src="<iframe width="560" height="315" src="<iframe width="560" height="315" src=<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
+<p><p></p><iframe width="560" height="315" src="<iframe width="560" src=<iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h3>
-<a name="Parliamo di cucina sarda" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a name="Parliamo di cucina sarda" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Parliamo di cucina sarda!</h3>
 
 <p>La cucina sarda, ovvero la cucina tipica dell'isola della Sardegna, è variegata, caratterizzata dall'insularità e dalla cultura agropastorale, arricchita nella storia attraverso apporti e contaminazioni dai contatti e scambi fra diverse culture mediterranee. Varia e diversificata, spazia dalle carni arrostite, al pane, i formaggi, i vini, a piatti di mare e di terra, sia di derivazione contadina che pastorale, di cacciagione, di pesca e di raccolta di erbe spontanee. Viene considerata parte della dieta mediterranea, modello nutrizionale proclamato nel 2010 dall'Unesco tra i patrimoni orali e immateriali dell'umanità.</p>
 <h3>
