--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 <h3>
 <a name="......" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>TRA MARE, MONTAGNA E... CUCINA</h3>
 
-<p><p><frame>src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
+<p><p><iframe width="560" height="315" src="//www.youtube.com/embed/_qSXMAZygXw" frameborder="0" allowfullscreen></iframe></p></p>
 
 <h3>
 <a name="Parliamo di cucina sarda" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Parliamo di cucina sarda!</h3>
