--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>MA CHE BOLLE IN PENTOLA?</title>
   </head>
 
-  <body>
+  <body style="background-color:#F09611;"></body>
     <a id="forkme_banner" href="https://github.com/Sara-Cireddu">View on GitHub</a>
     <div class="shell">
 
