--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 
 <p>La cucina sarda, ovvero la cucina tipica dell'isola della Sardegna, è variegata, caratterizzata dall'insularità e dalla cultura agropastorale, arricchita nella storia attraverso apporti e contaminazioni dai contatti e scambi fra diverse culture mediterranee. Varia e diversificata, spazia dalle carni arrostite, al pane, i formaggi, i vini, a piatti di mare e di terra, sia di derivazione contadina che pastorale, di cacciagione, di pesca e di raccolta di erbe spontanee. Viene considerata parte della dieta mediterranea, modello nutrizionale proclamato nel 2010 dall'Unesco tra i patrimoni orali e immateriali dell'umanità.</p>
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Ravioli alla campidanese</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>RICETTA.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
