--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@ Questo sito è dedicato alle migliori ricette dell'amata Sardegna!Isola ricca di
 
 <p>Noi i chiamiamo “Cruxionis a mazz’e pardula” ,sono dei ravioli col ripieno tipo, appunto, le Pardulas dette anche ricotelle o formagelle.
 Ecco la ricetta per una sessantina di ravioli circa :-D sono 12 porzioni, ma non vale la pena mettersi a impastare per farne pochi, poi tanto c’è zio freezer che ce li ripropone proprio quel giorno che magari siamo più stanche e bisognose di una coccola speciale ;-), anche perché li potete cuocere direttamente surgelati.
-
 Attenzione alcuni li fanno con la buccia dell’arancio altri con quella del limone, io ci metto tutt’e due in proporzione di 2 a 1.</p>
-
+<p>
+  <ul>
+    <li>INGREDIENTI</li>
+  </ul>
+</p>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
