--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ Attenzione alcuni li fanno con la buccia dell’arancio altri con quella del lim
 <p>
   <ul>
     <li>INGREDIENTI</li>
+    <li>Per il riprieno:</li>
+    <li>1kg di ricotta pecorina fresca</li>
+    <li>2 arance medie non trattate</li>
   </ul>
 </p>
 <h3>
