--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@ Attenzione alcuni li fanno con la buccia dell’arancio altri con quella del lim
   </ul>
   
 </p>
+<p>PROCEDIMENTO:</p>
+<p>Mettete a scolare molto bene la ricotta, più sarà asciutta meglio è, aggiungete i tuorli uno per volta e mescolate bene se l’impasto dovesse essere troppo morbido non aggiungete l’ultimo uovo,
+Aggiungete anche lo zucchero, la buccia degli agrumi e lo zafferano.
+mettete in frigo
+Impastate la semola con gli albumi e aggiungete acqua tiepidina fino ad ottenere una pasta piuttosto soda e liscia
+Ora stendete la sfoglia, io uso la sfogliatrice fino allo spessore 2,
+
+Posate la striscia di pasta sul tavolo e mettete a intervalli di circa 6cm delle palline di ripieno di circa 3 cm di diametro, mettetele un po’ più verso di voi piuttosto che al centro, un trucco usate la sacca a poche col beccuccio tondo liscio grosso, oppure senza beccuccio, ci mettete la metà del tempo che col cucchiaino ;-) 
+ora chiudete la pasta semplicemente piegandola lungo il lato lungo.
+Premete bene per far aderire e ritagliate con la rotella dentata (curiosità etnica in sardo si chiama “sarreta”).
+Vi verranno dei ravioloni rettangolari che misurano circa 5X9vcm.
+Brave finito.Mettete una bella pentola d’acqua salata sul fuoco, buttate i ravioli e lasciate riprendere il bollore, abbassate la fiamma e toglieteli delicatamente con la schiumarola dopo un minuto da che vengono a galla.
+
+Vi consiglio di servirli con una salsa di pomodoro molto leggera, perché hanno un gusto delicatissimo e qualunque sugo elaborato prevaricherebbe, allo stesso tempo essendo lievemente dolci l’acidulo del pomodoro è un contrappunto perfetto.
+Se qualcosa non è chiaro fatemelo sapere, sono qui :-)</p>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
