--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@ Premete bene per far aderire e ritagliate con la rotella dentata (curiosità etn
 Vi verranno dei ravioloni rettangolari che misurano circa 5X9vcm.
 Brave finito.Mettete una bella pentola d’acqua salata sul fuoco, buttate i ravioli e lasciate riprendere il bollore, abbassate la fiamma e toglieteli delicatamente con la schiumarola dopo un minuto da che vengono a galla.
 
-Vi consiglio di servirli con una salsa di pomodoro molto leggera, perché hanno un gusto delicatissimo e qualunque sugo elaborato prevaricherebbe, allo stesso tempo essendo lievemente dolci l’acidulo del pomodoro è un contrappunto perfetto.
-Se qualcosa non è chiaro fatemelo sapere, sono qui :-)</p>
+Vi consiglio di servirli con una salsa di pomodoro molto leggera, perché hanno un gusto delicatissimo e qualunque sugo elaborato prevaricherebbe, allo stesso tempo essendo lievemente dolci l’acidulo del pomodoro è un contrappunto perfetto.</p>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
