--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Ma che bolle in pentola?</h1></h1>
-            <h2>ricette di Sardegna.</h2>
+            <h2>Ricette di Sardegna. A cura di Sara Cireddu.</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
